--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.42.1",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "react-tooltip": "^5.3.1",
     "styled-components": "^5.3.6",
     "styled-icons": "^10.46.0",
